rearranged CsvReportService logic